[package]
name = "drrustcom"
version = "0.1.0"
edition = "2024"
authors = ["Astesia"]
description = "A modern, type-safe Dr.COM authentication core library in Rust."
license = "AGPL-3.0-only"

[dependencies]
md-5 = "0.10"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
rand = "0.8"
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
